--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ pygmentsUseClasses=true
 pygmentsCodeFences=true
 
 [params.intro]
-  main = "Hi, I'm Andrea :wave:"
+  main = "Hi, I'm Andrea :)" #:wave:
   sub = "I'm a Computer Engineering Student"
 
 [params.main]
@@ -55,8 +55,8 @@ pygmentsCodeFences=true
   #gitlab = "https://gitlab.com/"
 
 [params.contact]
-  email = ""
-  text= "" # text of the contact link in the sidebar. If email params.contact.email is defined
+  email = "andreaar1605@gmail.com"
+  text= "Send me an email" # text of the contact link in the sidebar. If email params.contact.email is defined
 
 
 [menu]
