--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ pygmentsCodeFences=true
 
 [params.social]
   github = "https://github.com/Andy-Aranda"
-  twitter = "https://twitter.com/"
+  twitter = "https://twitter.com/4ndy_1"
   linkedin = "https://www.linkedin.com/in/andrea-aranda-rdz/"
   #medium = "https://medium.com/"
   #gitlab = "https://gitlab.com/"
